--- a/Tex/Atividades/Felipe/Exercicios.tex
+++ b/Tex/Atividades/Felipe/Exercicios.tex
@@ -3584,7 +3584,112 @@ Primeiro, usaremos a utilidade esperada para montar o exercício:
 \end{equation}
 
 
+\begin{center}
+	\section*{Questões José Guilherme - Nota 14}
+\end{center}
+
+\singlespacing
+
+\textbf{1-} Considere um investidor com renda w e utilidade $u(w) = \sqrt{w}$. Suponha que ele deseja
+investir R\$ 150,00 na compra de ações de duas empresas, empresa A e empresa B. Os preços das ações das duas empresas são iguais a R\$ 15,00. O preço das ações das duas empresas no período seguinte depende de dois estados da natureza: expansão ou contração. A tabela
+abaixo descreve os preços de ambas as ações para os dois estados da natureza possíveis, além das probabilidades destes estados.
+
+\begin{equation}
+\begin{array}{lccc}
+\hline \text { \textbf{Estado} } & \text { \textbf{Prob.} } & \text { \textbf{Empresa A} } & \text { \textbf{Empresa B} } \\
+\hline \text { expansão } & 50 \% & 40 & 5 \\
+\text { contração } & 50 \% & 5 & 40 \\
+\hline
+\end{array}
+\end{equation}
+
+\singlespacing
+
+\textbf{A)} Calcule o preço esperado destas ações. Calcule o retorno esperado destas ações.
+\singlespacing
+\textbf{B)} Se o individuo investir toda a sua renda na ação A, qual será a sua utilidade esperada?
+Qual será a utilidade esperada se ele investir toda a renda na ação B?
+\singlespacing
+\textbf{C)} Qual a utilidade esperada se o individuo investir metade da renda na ação A e metade na ação B?
+\singlespacing
+\textbf{D)} Comparando as três possibilidades de investimento descritas nos itens b) e c), em qual delas o investidor obterá maior utilidade?
+\singlespacing
+\textbf{E)} A opção de investimento encontrada no item d) é a que maximiza a utilidade do investidor?
+
+\singlespacing
+
+\textbf{Respostas:}
+
+\singlespacing
+
+\textbf{A)} O preço esperado das ações serão:
+
+\begin{equation}
+	P_{A} = 0,5 \cdot 40 + 0,5 \cdot 5
+	$$\\$$
+	P_{A} = 22,5
+	$$\\$$
+	P_{B} = 0,5 \cdot 5 + 0,5 \cdot 40
+	$$\\$$ P_{B} = 22,5
+\end{equation}
+
+Para encontrar o retorno esperado ($R_{i}$) é feito o seguinte:
+
+\begin{equation}
+	R_{i} = \dfrac{P_{1} - P_{0}}{P_{0}}
+\end{equation}
+
+Aplicando os valores na fórmula:
+
+\begin{equation}
+	R_{A} = \dfrac{22,5 - 15}{15}
+	$$\\$$
+	R_{A} = 0,5
+	$$\\$$
+	R_{B} = \dfrac{22,5 - 15}{15}
+	$$\\$$ 
+	R_{B} = 0,5
+\end{equation}
+
+\singlespacing
+
+\textbf{B)} Se o individuo investir toda a sua renda, que no caso corresponde a R\$ 150 em ações que custam R\$ 15. Ele irá comprar 10 ações. Sabendo que \textbf{w} = $\sqrt{w}$ é a utilidade, iremos aplicar o seguinte:
+
+\begin{equation}
+	U_{A} = 0,5 \cdot \sqrt{40 \cdot 10} + 0,5 \cdot \sqrt{{5 \cdot 10}}
+	$$\\$$
+	U_{A} = 0,5 \cdot \sqrt{400} + 0,5\cdot\sqrt{50} 
+	$$\\$$
+	U_{A} = 13,53
+\end{equation}
+
+Ou seja, a utilidade de se comprar todas as ações da empresa A, será de 13,53. No caso da empresa B.
+
+\begin{equation}
+	U_{B} = 0,5 \cdot \sqrt{5 \cdot 10} + 0,5 \sqrt{40 \cdot 10}
+	$$\\$$
+	U_{B} = 0,5 \cdot \sqrt{50} + 0,5 \cdot \sqrt{400}
+	$$\\$$
+	U_{B} = 13,53
+\end{equation}
+
+A utilidade esperada quando se compra todas as ações da empresa B será de 13,53.
+
+\singlespacing
 
 
+\textbf{C)} Nesse caso, é um processo de diversificação. Será usado R\$ 75 na empresa A e a outra metade na empresa B, assim, será comprado 5 ações de cada empresa, lembrando que o preço de cada ação é R\$ 15. A utilidade esperada será da seguinte maneira:
 
+\begin{equation}
+	U_{C} = 0,5 \sqrt{40 \cdot 5 + 5 \cdot 5} + 0,5 \sqrt{5 \cdot 5 + 40 \cdot 5 }
+	$$\\$$
+	U_{C} = 0,5 \sqrt{200 + 25} + 0,5 \sqrt{25 + 200}
+	$$\\$$
+	U_{C} = 0,5 \sqrt{225} + 0,5 \sqrt{225}
+	$$\\$$
+	U_{C} = 15
+\end{equation}
 
+\singlespacing
+
+\textbf{D)} A maior utilidade será a \textbf{$U_{C}$} que foi fruto da diversificação.
