--- a/Tex/Atividades/preamble.tex
+++ b/Tex/Atividades/preamble.tex
@@ -13,3 +13,6 @@
 \usepackage[normalem]{ulem} % Pacote para usar o uuline (texto sublinhado)
 \usepackage{multirow} % Pacote para criação de Tabular.
 \usepackage{tikz-3dplot}
+\setlength{\belowdisplayskip}{0pt} \setlength{\belowdisplayshortskip}{0pt}
+\setlength{\abovedisplayskip}{0pt} \setlength{\abovedisplayshortskip}{0pt}
+\usepackage{setspace}\onehalfspacing
